# fastnorm_cpp

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py  test.py
.github/workflows/: pypi-publish.yml
benchmarks/: compare_pytorch.py
include/: rmsnorm.h
include/fastnorm/: rmsnorm.h
src/: bindings.cpp  fastnorm.cpp  rmsnorm.cpp
src/cpu/: rmsnorm.cpp
src/fastnorm_cpp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_rmsnorm.py
