[project]
name = "fastnorm_cpp"
version = "0.1.2"
authors = [{name = "Mario Raach", email = "marioraach01@gmail.com"}]
description = "Test: A super fast C++ implementation of RMSNorm"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
]

[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.version = ">=3.15"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
