[project]
name = "fastnorm_cpp"
version = "0.1.3"
authors = [{name = "Mario Raach", email = "marioraach01@gmail.com"}]
description = "Test: A super fast C++ implementation of RMSNorm"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "torch>=2.9.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["setuptools", "torch"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
